Revision history for Test-API

{{$NEXT}}

0.004     2014-03-14 11:43:54+01:00 Europe/Paris

    [ADDED]

    - class_api_ok function tests methods, which may be provided the
      module tested or a superclass (Toby Inkster)

    [CHANGED]

    - dropped dependencies on superclass and Devel::Symdump (Toby Inkster)

0.003     2014-02-27 06:19:07-05:00 America/New_York

    [CHANGED]

    - updated distribution metadata, repo and bugtracker

    - switched to Dist::Zilla for managing this distribution

0.002 Mon Mar  9 18:30:20 EDT 2009

    [ADDED]

    - import_ok() function

0.001 Sun Mar  8 16:38:11 EDT 2009

    - Initial release