@@ -4,4 +4,6 @@ use warnings;
 
 sub _foo { 1 }
 
+sub AUTOLOAD { 1 }
+
 1;
